--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>SoftpulseAI Technologies - AI Solutions & Digital Innovation</title>
     <meta name="description" content="Pioneering next-generation AI solutions, custom software development, and healthcare technology. Transforming businesses with innovation and excellence." />
     <meta name="author" content="SoftpulseAI Technologies LLP" />
+<link rel="icon" type="image/png" href="/favicon.png" />
+
+
+
 
     <meta property="og:title" content="SoftpulseAI Technologies - AI Solutions & Digital Innovation" />
     <meta property="og:description" content="Pioneering next-generation AI solutions, custom software development, and healthcare technology. Transforming businesses with innovation and excellence." />
