--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <link rel="icon" type="image/png" href="/favicon.png" />
 
 
+<script>
+  (function () {
+    var redirect = sessionStorage.redirect;
+    delete sessionStorage.redirect;
+    if (redirect && redirect !== location.href) {
+      history.replaceState(null, null, redirect);
+    }
+  })();
+</script>
 
 
     <meta property="og:title" content="SoftpulseAI Technologies - AI Solutions & Digital Innovation" />
